--- a/src/app/components/administrar-login/login/login.component.css
+++ b/src/app/components/administrar-login/login/login.component.css
@@ -1,7 +1,77 @@
-.container{
-  display: flex;
+
+.container-fluid{
+  background-color: #699999;
   justify-content: center;
+  display: flex;
   align-items: center;
   width: 100vw;
   height: 100vh;
+}
+
+.contenedor-boton {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 40px;
+}
+
+.boton {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	width: 320%;
+	height: 45px;
+	background: #1A545C;
+	color: #fff;
+	font-family: 'Roboto', sans-serif;
+	font-size: 13px;
+	font-weight: 500;
+	border: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: .3s ease all;
+	border-radius: 5px;
+	position: relative;
+	overflow: hidden;
+}
+
+.boton span {
+	position: relative;
+	z-index: 2;
+	transition: .3s ease all;
+}
+
+.boton.login span {
+	transition: .4s ease-in-out all;
+	position: absolute;
+	left: 35%;
+}
+
+.boton.login .icono {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	z-index: 2;
+	left: -40px;
+	transition: .3s ease-in-out all;
+	opacity: 0;
+}
+
+.boton.login svg {
+	color: #fff;
+	width: 35px;
+	height: 35px;
+}
+
+.boton.login:hover {
+	background: #699999;
+}
+
+.boton.login:hover .icono {
+	left: calc(100% - 50px);
+	opacity: 1;
+}
+
+.boton.login:hover span {
+	left: 20px;
 }
