--- a/src/app/components/administrar-login/login/login.component.html
+++ b/src/app/components/administrar-login/login/login.component.html
@@ -1,31 +1,63 @@
-<div class="container">
+<div class="container-fluid">
   <div class="card text-center">
-      <div class="card-header">
-          <b>Iniciar Sesión</b>
-      </div>
-      <div class="card-body p-4">
-          <label style="float: left;">Correo</label>
+
+    <div class="card-header">
+        <b>Iniciar Sesión</b>
+    </div>
+
+    <div class="card-body">
+
+      <form [formGroup]="form" novalidate (ngSubmit)="save($event)">
+        <div class="form-floating form-group">
           <input
-              class="form-control m-2"
-              type="email"
-              name="email"
-              placeholder="ingrese su email"
-              [(ngModel)]="user.email">
+          class="input form-control mb-2"
+          type="email"
+          id="email"
+          name="email"
+          formControlName="email"
+          placeholder="ingrese su email"
+          [(ngModel)]="user.email"
+          >
+          <label for="email">Correo</label>
 
-          <label style="float: left;">Contraseña</label>
+          <div *ngIf="emailField.errors && emailField.touched">
+            <p *ngIf="emailField.hasError('required')" class="text-danger">Necesitas ingresar tu correo</p>
+            <p *ngIf="emailField.hasError('email')" class="text-danger">Formato de correo no valido</p>
+          </div>
+        </div>
+
+        <div class="form-floating form-group">
           <input
-              class="form-control m-2"
-              type="password"
-              placeholder="ingrese su contraseña"
-              [(ngModel)]="user.password">
+            class="form-control mb-2"
+            type="password"
+            id="password"
+            name="password"
+            formControlName="password"
+            placeholder="ingrese su contraseña"
+            [(ngModel)]="user.password"
+          >
+          <label for="password">Contraseña</label>
 
-          <div class="d-grid gap-2">
-              <button class="btn btn-primary m-2" (click)="Ingresar()">Ingresar</button>
+          <div *ngIf="passwordField.errors && form.get('password').touched">
+            <p *ngIf="passwordField.hasError('required')" class="text-danger">Necesitas ingresar tu contraseña</p>
           </div>
+        </div>
 
-          <div>
-              Aun no tienes cuenta? <a routerLink="/signup">Registrarse</a>
-          </div>
+        <div class="contenedor-boton d-grid gap-2 mb-3">
+            <button class="boton login" type="submit">
+              <div class="icono">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
+                </svg>
+              </div>
+              <span>Ingresar</span>
+            </button>
+        </div>
+      </form>
+
+      <div>
+          Aun no tienes cuenta? <a routerLink="/signup">Registrarse</a>
       </div>
+    </div>
   </div>
 </div>
