--- a/src/app/components/administrar-banners/administrar-banners.component.html
+++ b/src/app/components/administrar-banners/administrar-banners.component.html
@@ -1,4 +1,5 @@
-<div class="container" *ngIf="userLogged|async as user">
+<div class="container text-center" *ngIf="userLogged|async as user">
+  <!--
   <div *ngFor="let users of userList">
     <div *ngIf="user.email==users.email && users.rank=='admin'">
       <div class="row">
@@ -11,4 +12,6 @@
     </div>
     </div>
   </div>
+  -->
+  <img src="assets/en-proceso.png" alt="trabajando...">
 </div>
