--- a/src/app/components/administrar-banners/banner/banner.component.html
+++ b/src/app/components/administrar-banners/banner/banner.component.html
@@ -4,7 +4,7 @@
       <b>Gestionar Banner</b>
     </div>
 
-    <div appNgDropImages [files]="files" (mouseSobre)="dropElement = $event; addFormBanner()"
+    <!-- <div appNgDropImages [files]="files" (mouseSobre)="dropElement = $event; addFormBanner()"
       [ngClass]="{ 'file-over': dropElement }" mouse class="well drop-zone">
       <h4 class="">Deja caer los archivos</h4>
       <img src="assets/imagen.png" class="img-fluid d-block mx-auto " alt="img-dopfiles">
@@ -60,7 +60,7 @@
           </ng-template>
         </swiper>
       </div>
-    </form>
+    </form> -->
 
   </div>
 </div>
