comit formcontrolname eliminado

--- a/src/app/components/administrar-citas/cita/cita.component.html
+++ b/src/app/components/administrar-citas/cita/cita.component.html
@@ -17,7 +17,6 @@
           class="form-control m-2"
           id="date"
           name="fecha"
-          formControlName="fecha"
           #fecha
           [(ngModel)]="citaService.selectedCita.fecha"
           maxlength=10
@@ -40,26 +39,24 @@
           placeholder="escoge tu horario"
           required
           >
-          <option value="8:00">8:00</option>
-          <option value="8:30">8:30</option>
-          <option value="9:00">9:00</option>
-          <option value="9:30">9:30</option>
-          <option value="10:00">10:00</option>
-          <option value="10:30">10:30</option>
-          <option value="11:00">11:00</option>
-          <option value="11:30">11:30</option>
-          <option value="12:00">12:00</option>
-          <option value="12:30">12:30</option>
-          <option value="2:00">2:00</option>
-          <option value="2:30">2:30</option>
-          <option value="3:00">3:00</option>
-          <option value="3:30">3:30</option>
-          <option value="4:00">4:00</option>
-          <option value="4:30">4:30</option>
-          <option value="5:00">5:00</option>
-          <option value="5:30">5:30</option>
-          <option value="6:00">6:00</option>
-          <option value="6:30">6:30</option>
+          <option value="9:00">9:00 am</option>
+          <option value="9:30">9:30 am</option>
+          <option value="10:00">10:00 am</option>
+          <option value="10:30">10:30 am</option>
+          <option value="11:00">11:00 am</option>
+          <option value="11:30">11:30 am</option>
+          <option value="12:00">12:00 am</option>
+          <option value="12:30">12:30 am</option>
+          <option value="3:00">3:00 am</option>
+          <option value="3:30">3:30 am</option>
+          <option value="4:00">4:00 am</option>
+          <option value="4:30">4:30 am</option>
+          <option value="5:00">5:00 am</option>
+          <option value="5:30">5:30 am</option>
+          <option value="6:00">6:00 am</option>
+          <option value="6:30">6:30 am</option>
+          <option value="7:00">7:00 am</option>
+          <option value="7:30">7:30 am</option>
         </select>
           <label for="hora">Hora</label>
       </div>
@@ -136,7 +133,6 @@
               >
               <option value="Pendiente">Pendiente</option>
               <option value="Realizado">Realizado</option>
-              <option value="Cancelado">Cancelado</option>
             </select>
             <label for="state">Estado</label>
           </div>
