--- a/src/app/components/administrar-historial/administrar-historial.component.html
+++ b/src/app/components/administrar-historial/administrar-historial.component.html
@@ -37,8 +37,8 @@
       </div>
     </div>
 
-    <div class="card m-4 col-7">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias obcaecati, fugit itaque expedita nisi beatae deserunt aliquid molestias quisquam eos. Aut ea, fugiat impedit explicabo accusantium ratione quia delectus amet?</p>
+    <div class="card m-4 col-6">
+      <img src="assets/odontoServices.png" alt="Odonto Services">
     </div>
   </div>
 </div>
